Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33424

Crash when opening session with remote projects on devices that are disconnected

XMLWordPrintable

    • d62f7fdc5 (master)

      Crashing code (accessing Result that doesn't have a value) was added by
      https://codereview.qt-project.org/c/qt-creator/qt-creator/+/660759 see also there.

      • create a remote linux device
      • create a kit with that as the build device
      • open a project from that device
      • close Qt Creator and reopen it (the device is now disconnected by default)
      • reopen the session
      SOFT ASSERT [08:39:12.293]: /Users/***/qtcreator/src/plugins/cmakeprojectmanager/cmakeprojectimporter.cpp:129: Device for ssh://***@***/***/temp/plaincpp/.qtcreator is unavailable.
      SOFT ASSERT [08:39:12.293]: /Users/***/qtcreator/src/plugins/cmakeprojectmanager/cmakeprojectimporter.cpp:132: Device for ssh://***@***/***/temp/plaincpp/.qtcreator/qtc-cmake-presets-XXXXXXXX is unavailable.
      libc++abi: terminating due to uncaught exception of type tl::bad_expected_access<QString>: Bad expected access
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes