CMakePM: Add error checking for temporary import directory creation

Amends e477ef94ce795a9c467dd92554f77711e37a654b

Used by CMake Presets probing mechanism. If the temporary import
directory can't be created, then the presets are not supported.

This is the case for remote builds at the moment.

Fixes: QTCREATORBUG-33424
Change-Id: Ic0f381046f3b2bd3c2dbad32ba18db3c7d6ec469
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>